--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three JS Practice</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Solar System</title>
     <style>
-        body {
-            margin: 0;
+        body { margin: 0; overflow: hidden; }
+        #infoBox {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            display: none;
+            max-width: 600px;
+            font-size: 80px;
         }
+        #infoBox h2 { margin-top: 0; }
     </style>
-    <script type="importmap">
+</head>
+<body>
+<canvas id="c"></canvas>
+<div id="infoBox">
+    <h2 id="planetName">Planet Name</h2>
+    <p id="planetInfo">Information about the planet will appear here.</p>
+</div>
+<script type="importmap">
 			{
 				"imports": {
 					"three": "https://cdn.jsdelivr.net/npm/three@0.161/build/three.module.js",
@@ -17,11 +35,8 @@
         }
 			}
 		</script>
-</head>
-<body>
-<canvas id="c"></canvas>
-
 <script type="module" src="main.js"></script>
+
 <!--<script type="module" src="node_modules/three/examples/jsm/controls/OrbitControls.js"></script>-->
 <!--<script type="module" src="node_modules/three/build/three.module.js"></script>-->
 <!--<script type="module" src="."></script>-->
