added menu ad pause/go button. was trying to fix moveToObject function(i didn`t fix that)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar System</title>
     <style>
-        body { margin: 0; overflow: hidden; }
+        body {
+            margin: 0;
+            overflow: hidden;
+            position: relative; /* Додано */
+        }
+
+        /* Стилі для canvas */
+        #c {
+            position: fixed; /* змінено з absolute на fixed */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1; /* Від'ємний z-index, щоб canvas був під усіма елементами */
+        }
+
+        /* Стилі для header */
+        .header {
+            position: relative;
+            z-index: 10;
+            width: 100%;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 20px 0;
+        }
+
+        .header-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
+        }
+
+        .header-body {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header-menu ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 30px;
+        }
+
+        .header-menu li {
+            color: white;
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+
+        .header-animation {
+            width: 40px; /* Фіксована ширина батьківського контейнера */
+            height: 40px; /* Фіксована висота батьківського контейнера */
+            display: flex; /* Використовуємо flex для центрування кнопки */
+            align-items: center;
+            justify-content: center;
+        }
+
+        #animationButton {
+            width: 100%; /* Займає всю ширину батьківського елемента */
+            height: 100%; /* Займає всю висоту батьківського елемента */
+            background-color: rgba(255, 255, 255, 0.8);
+            border: none;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            cursor: pointer;
+            display: flex; /* Використовуємо flexbox для центрування іконок */
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+        }
+
+        .play-icon, .pause-icon {
+            width: 40px;
+            height: 40px;
+        }
+
+        .pause-icon {
+            display: block;
+        }
+
+        .play-icon {
+            display: none;
+        }
+
         #infoBox {
-            position: absolute;
+            position: fixed; /* змінено з absolute на fixed */
             top: 20px;
             left: 20px;
             padding: 20px;
@@ -17,16 +103,51 @@
             display: none;
             max-width: 350px;
             font-size: 30px;
+            z-index: 10;
         }
-        #infoBox h2 { margin-top: 0; }
     </style>
 </head>
 <body>
+<header class="header">
+    <div class="header-container">
+        <div class="header-body">
+            <div class="header-menu">
+                <ul>
+                    <li onclick="setupMenuListeners()">Sun</li>
+                    <li onclick="setupMenuListeners()">Mercury</li>
+                    <li onclick="setupMenuListeners()">Venus</li>
+                    <li onclick="setupMenuListeners()">Earth</li>
+                    <li onclick="setupMenuListeners()">Mars</li>
+                    <li onclick="setupMenuListeners()">Asteroid belt</li>
+                    <li onclick="setupMenuListeners()">Jupiter</li>
+                    <li onclick="setupMenuListeners()">Saturn</li>
+                    <li onclick="setupMenuListeners()">Uranus</li>
+                    <li onclick="setupMenuListeners()">Neptune</li>
+
+                </ul>
+            </div>
+            <div class="header-animation">
+                <button id="animationButton">
+                    <svg class="pause-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M10 4H6v16h4V4zm8 0h-4v16h4V4z"/>
+                    </svg>
+                    <svg class="play-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M8 5v14l11-7z"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+</header>
+
 <canvas id="c"></canvas>
 <div id="infoBox">
     <h2 id="planetName">Planet Name</h2>
     <p id="planetInfo">Information about the planet will appear here.</p>
 </div>
+
+
+
 <script type="importmap">
 			{
 				"imports": {
