--- a/index.html
+++ b/index.html
@@ -105,6 +105,61 @@
             font-size: 30px;
             z-index: 10;
         }
+        .switch-wrapper {
+            display: flex;
+            align-items: center;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        .switch-wrapper input {
+            display: none;
+        }
+
+        .switch {
+            position: relative;
+            width: 50px;
+            height: 25px;
+            background-color: #ccc;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .switch::before {
+            content: '';
+            position: absolute;
+            width: 23px;
+            height: 23px;
+            background-color: white;
+            border-radius: 50%;
+            top: 1px;
+            left: 1px;
+            transition: transform 0.3s;
+        }
+
+        input:checked + .switch {
+            background-color: #4caf50;
+        }
+
+        input:checked + .switch::before {
+            transform: translateX(25px);
+        }
+        /* Новий стиль для вирівнювання 2D і 3D */
+        .view-toggle {
+            text-align: center;
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+            justify-content: space-between;
+            width: 100px; /* Фіксована ширина для вирівнювання 2D та 3D */
+        }
+
+        .toggle-label {
+            font-size: 16px;
+            color: white;
+        }
+
     </style>
 </head>
 <body>
@@ -135,7 +190,19 @@
                         <path d="M8 5v14l11-7z"/>
                     </svg>
                 </button>
+
+                <!-- Блок з перемикачем -->
+                <div class="view-toggle">
+                    <span class="toggle-label">2D</span>
+                    <div class="switch-wrapper">
+                        <input type="checkbox" id="viewSwitch" checked>
+                        <label for="viewSwitch" class="switch"></label>
+                    </div>
+                    <span class="toggle-label">3D</span>
+                </div>
             </div>
+
+
         </div>
     </div>
 </header>
