Speed Animation TrackBar was added successfully

--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
                     </div>
                 </div>
             </li>
+            <li>
+                <div class="AnimationSpeedSlider-container">
+                    <div class="AnimationSpeedSlider-body">
+                        <label for="myRange" class="AnimationSpeedSlider-label">Animation Speed</label>
+                        <input type="range" min="0" max="8" step="1" value="1" class="AnimationSpeedSlider" id="myRange">
+                    </div>
+                    <div class="tick-marks">
+                        <span>0</span>
+                        <span>2</span>
+                        <span>4</span>
+                        <span>6</span>
+                        <span>8</span>
+                    </div>
+                </div>
+            </li>
         </ul>
     </aside>
 </div>
