added blocking OrbitControls while in 2D. added a popup when hovering over an object. some work was made with cursors.

--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
 
         <!-- Canvas Container -->
         <div class="canvas-container">
-            <canvas id="c"></canvas>
+            <canvas id="c" style="cursor: grab;"></canvas>
         </div>
 
         <!-- Info Box -->
-<!--        <div id="infoBox">-->
-<!--            <h2 id="planetName"></h2>-->
-<!--            <p id="planetInfo"></p>-->
-<!--        </div>-->
+        <div id="infoBox">
+            <h2 id="planetName"></h2>
+            <p id="planetInfo"></p>
+        </div>
+        <!-- Tooltip -->
+        <div id="tooltip"></div>
     </main>
+
 
     <!-- Right Sidebar -->
     <aside class="sidebar-right">
