--- a/index.html
+++ b/index.html
@@ -5,6 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Solar System</title>
+    <style>
+        .sidebar-left ul li {
+            padding: 10px 15px;
+            color: white;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border-radius: 8px;
+            margin-bottom: 5px;
+            position: relative;
+            padding-left: 30px;  /* Додаємо місце для трикутника */
+        }
+
+        .sidebar-left ul li::before {
+            content: '';
+            position: absolute;
+            right: 12px;
+            top: 50%;
+            width: 0;
+            height: 0;
+            border-top: 6px solid transparent;
+            border-bottom: 6px solid transparent;
+            border-left: 8px solid white;
+            transform: translateY(-50%);
+            transition: transform 0.3s ease;
+        }
+
+        .sidebar-left ul li:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+            transform: translateX(5px);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .sidebar-left ul li:hover::before {
+            transform: translateY(-50%) rotate(90deg);
+        }
+
+        /* Приховуємо стандартний вигляд посилань */
+        .sidebar-left ul li a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Забираємо підкреслення при наведенні */
+        .sidebar-left ul li a:hover {
+            text-decoration: none;
+        }
+
+        /* Забираємо колір відвіданих посилань */
+        .sidebar-left ul li a:visited {
+            color: white;
+        }
+    </style>
 </head>
 <body>
 <div class="layout-container">
@@ -12,15 +67,16 @@
     <aside class="sidebar-left">
         <h2>Space objects</h2>
         <ul>
-            <li onclick="setupMenuListeners()">Sun</li>
-            <li onclick="setupMenuListeners()">Mercury</li>
-            <li onclick="setupMenuListeners()">Venus</li>
-            <li onclick="setupMenuListeners()">Earth</li>
-            <li onclick="setupMenuListeners()">Mars</li>
-            <li onclick="setupMenuListeners()">Jupiter</li>
-            <li onclick="setupMenuListeners()">Saturn</li>
-            <li onclick="setupMenuListeners()">Uranus</li>
-            <li onclick="setupMenuListeners()">Neptune</li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Sun</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Mercury</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Venus</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Earth</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Mars</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Asteroid Belt</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Jupiter</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Saturn</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Uranus</a></li>
+            <li onclick="setupMenuListeners()"><a href="additionalFiles/DemoPlanetInfo.html">Neptune</a></li>
         </ul>
     </aside>
 
